[project]
name = "moonedge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Philip Gardner", email = "github@philipgardner.com" }
]
dependencies = [
    "typer>=0.13.1",
    "rich>=13.9.4",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "backtrader>=1.9.78.123",
    "yfinance>=0.2.49",
    "ephem>=4.1.6",
    "deap>=1.4.1",
    "robin-stocks>=3.2.1",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "flake8>=7.1.1",
    "black>=24.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/moonedge"]
